<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.11</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.dbs.poc</groupId>
    <artifactId>unblu</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>unblu-parent</name>
    <description>Unblu Integration PoC with Hexagonal Architecture</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <unblu.version>8.30.1</unblu.version>
        <camel.version>4.18.0</camel.version>
        <springdoc.version>2.8.0</springdoc.version>
        <dotenv.version>4.0.0</dotenv.version>
    </properties>

    <modules>
        <module>unblu-domain</module>
        <module>unblu-infrastructure</module>
        <module>unblu-application</module>
        <module>unblu-exposition</module>
        <module>unblu-configuration</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Modules Internes -->
            <dependency>
                <groupId>org.dbs.poc</groupId>
                <artifactId>unblu-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.poc</groupId>
                <artifactId>unblu-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.poc</groupId>
                <artifactId>unblu-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.poc</groupId>
                <artifactId>unblu-exposition</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dbs.poc</groupId>
                <artifactId>unblu-configuration</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Camel -->
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-spring-boot-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-rest-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-jackson-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-resilience4j-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-http-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>

            <!-- Unblu OpenAPI -->
            <dependency>
                <groupId>com.unblu.openapi</groupId>
                <artifactId>jersey3-client-v4</artifactId>
                <version>${unblu.version}</version>
            </dependency>

            <!-- Springdoc OpenAPI (Swagger) -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <!-- Dotenv support -->
            <dependency>
                <groupId>me.paulschwarz</groupId>
                <artifactId>spring-dotenv</artifactId>
                <version>${dotenv.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
